<resources>
    <string name="app_name">DiveIn</string>
    <string name="action_dives">Dives</string>
    <string name="action_new_diver">New</string>
    <string name="action_divers">Divers</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_dives">Dives</string>
    <string name="title_activity_divers">Divers</string>
    <string name="title_activity_diver">Diver</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="year">Year</string>
    <string-array name="years_array">
        <item>Senior</item>
        <item>Junior</item>
        <item>Sophomore</item>
        <item>Freshman</item>
    </string-array>
    <string name="save">Save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
